<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.hsi.walldisplay.ui.login.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_layout"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="start"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:onClick="@{viewModel::showJobIpLayout}"
                    android:src="@drawable/ic_launcher_foreground" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_back"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/text_color"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_to_continue"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/text_color" />

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <LinearLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/email"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/text_color"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lines="1"
                        android:textSize="@dimen/title_text_size"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={viewModel.email}"
                        android:textColor="@color/text_color"
                        android:theme="@style/EditText.Grey"
                        tools:text="email" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/password"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/text_color"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:maxLength="50"
                        android:textSize="@dimen/title_text_size"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={viewModel.password}"
                        android:textColor="@color/text_color"
                        android:theme="@style/EditText.Grey"
                        tools:text="11111" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <com.balysv.materialripple.MaterialRippleLayout
                            style="@style/RippleStyleWhite"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2">

                            <Button
                                android:id="@+id/btnLogin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/shape_button_clicked"
                                android:onClick="@{viewModel::checkLogin}"
                                android:text="@string/sign_in"
                                android:textSize="@dimen/title_text_size"
                                android:textColor="@color/background"
                                android:textStyle="bold"
                                app:backgroundTint="@null" />


                        </com.balysv.materialripple.MaterialRippleLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:onClick="@{viewModel::showJobIpLayout}"
                        android:visibility="@{viewModel.jobIpLayoutShowing?View.GONE:View.VISIBLE}" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilJobIp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/shape_edit_text"
                        android:hint="local IP"
                        android:textColorHint="@color/hint_color"
                        android:visibility="@{viewModel.jobIpLayoutShowing?View.VISIBLE:View.GONE}"
                        app:endIconDrawable="@drawable/ic_save"
                        app:endIconMode="custom"
                        app:endIconTint="@color/text_color"
                        app:helperText="example http://192.168.1.1/"
                        app:helperTextTextColor="@color/text_color"
                        app:hintTextColor="@color/hint_color"
                        tools:visibility="visible">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shape_edit_text"
                            android:gravity="center_vertical"
                            android:inputType="number"
                            android:text="@={viewModel.localJobIp}"
                            android:textColor="@color/text_color"
                            android:windowSoftInputMode="adjustPan" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>