<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>


        <import type="com.hsi.walldisplay.model.ShowLayout" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.hsi.walldisplay.ui.main.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:background="@drawable/rounded_layout"
        android:gravity="center"
        android:visibility="@{viewModel.showLayout == ShowLayout.DALIS ? View.VISIBLE:View.GONE}">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel::onBackClicked}"
                android:padding="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back" />

            </com.balysv.materialripple.MaterialRippleLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/lights"
                android:textColor="@color/text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTop"
            app:layout_constraintVertical_bias="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/shape_line_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="@{viewModel::onLightListClicked}"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_5sdp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="140dp"
                            android:layout_height="140dp"
                            android:src="@drawable/ic_lights"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/adjust_the_lights"
                            android:textColor="@color/text_color"
                            android:textStyle="bold" />
                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:background="@drawable/shape_line_vertical" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="@{viewModel::onSceneListClicked}"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_5sdp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            setCircleImageUrl="@{viewModel.scene.imagePath}"
                            android:layout_width="140dp"
                            android:layout_height="140dp"
                            android:padding="@dimen/_10sdp"
                            android:src="@mipmap/ic_launcher"
                            app:civ_border_color="@color/text_color"
                            app:civ_border_width="1dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/select_the_scene"
                            android:textColor="@color/text_color"
                            android:textStyle="bold" />
                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/shape_line_horizontal" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>