<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">

    <data class="CurtainItem">

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.hsi.walldisplay.ui.main.viewmodel.CurtainViewModel" />

    </data>


    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_layout"
        android:orientation="vertical">

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="@{viewModel::changeVisibility}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:minHeight="?actionBarSize"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingEnd="@dimen/_5sdp">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@{`Curtain `+viewModel.curtain.serviceId}"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    tools:text="Curtain 1" />


                <ImageView
                    android:id="@+id/btnDelete"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@{viewModel.layoutSeekBarVisibility?@drawable/ic_arrow_up:@drawable/ic_arrow_down}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    tools:src="@drawable/ic_arrow_up"
                    tools:text="Curtain 1" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

        <LinearLayout
            android:id="@+id/layoutSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:visibility="gone"
            android:visibility="@{viewModel.layoutSeekBarVisibility?View.VISIBLE:View.GONE}">

            <LinearLayout
                android:id="@+id/layoutButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_3sdp"
                    android:background="@drawable/shape_button_clicked"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{viewModel::open}"
                    android:text="@string/open"
                    android:textColor="@color/background"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/btnStop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_3sdp"
                    android:background="@drawable/shape_button_clicked"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{viewModel::stop}"
                    android:text="@string/stop"
                    android:textColor="@color/background"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/btnClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_3sdp"
                    android:background="@drawable/shape_button_clicked"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{viewModel::close}"
                    android:text="@string/close"
                    android:textColor="@color/background"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:gravity="center">

                    <SeekBar
                        android:id="@+id/seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:max="100"
                        android:maxHeight="@dimen/_5sdp"
                        android:progressDrawable="@drawable/seekbar_progress_style"
                        android:thumb="@drawable/seekbar_thumb" />
                </LinearLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0%"
                        android:textColor="@color/text_color"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/tvSeekResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="50%" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100%"
                        android:textColor="@color/text_color"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/shape_line_horizontal" />
    </LinearLayout>

</layout>